-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.16.0, Lustre 2.15.6
-
3
-
9223372036854775807
Many subtests in Ubuntu 24.04 client test sessions failed as follows:
BUG: kernel NULL pointer dereference, address: 0000000000000004 #PF: supervisor write access in kernel mode #PF: error_code(0x0002) - not-present page Oops: 0002 [#1] PREEMPT SMP PTI CPU: 1 PID: 297293 Comm: ldlm_bl_04 6.8.0-31-generic #31-Ubuntu Hardware name: Red Hat KVM, BIOS 0.5.1 01/01/2011 RIP: 0010:ll_prune_negative_children+0xaf/0x260 [lustre] Call Trace: <TASK> ? page_fault_oops+0x99/0x1b0 ? do_user_addr_fault+0x2ee/0x6b0 ll_md_blocking_ast+0xb23/0xdf0 [lustre] ldlm_cancel_callback+0x7d/0x290 [ptlrpc] ldlm_cli_cancel_local+0xab/0x4a0 [ptlrpc] ldlm_cli_cancel_list_local+0x102/0x2c0 [ptlrpc] ldlm_bl_thread_main+0x826/0x9e0 [ptlrpc] kthread+0xf2/0x120 ret_from_fork+0x47/0x70 </TASK>
sanity test 24v: https://testing.whamcloud.com/test_sets/2255de0b-e637-40c6-a7c2-af194af04f9a
sanity test 72a: https://testing.whamcloud.com/test_sets/e4626eb0-6814-4125-b8c9-ec82d9d45a6d
sanityn test 90: https://testing.whamcloud.com/test_sets/dbb37b62-af78-469d-b324-8b599665b4e7
racer test 1: https://testing.whamcloud.com/test_sets/71154acf-735c-4355-adec-f554fa4e5788